network-security-config commentaire BASE_URL

--- a/AnimaflipApp/composeApp/src/androidMain/res/xml/network_security_config.xml
+++ b/AnimaflipApp/composeApp/src/androidMain/res/xml/network_security_config.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
+<!--        Faire correspondre avec ApiConfig.BASE_URL-->
         <domain includeSubdomains="true">10.0.2.2</domain>
     </domain-config>
 </network-security-config>
