--- a/AnimaflipApi/src/views/dashboard.html.twig
+++ b/AnimaflipApi/src/views/dashboard.html.twig
@@ -69,7 +69,7 @@
                     </button>
                 </div>
                 <div id="info-panel-theme" class="info-panel">
-                    <h3>Modification d'un thème : Gestion de ses annimations</h3>
+                    <h3>Modification d'un thème : Gestion de ses animations</h3>
                 </div>
             </div>
 
