--- a/AnimaflipApi/src/views/dashboard.html.twig
+++ b/AnimaflipApi/src/views/dashboard.html.twig
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animaflip - Administration</title>
+    <title>Animaflip - Panneau d'administration</title>
     <link rel="stylesheet" href="/css/admin.css">
 </head>
 <style> 
@@ -13,7 +13,7 @@
 </style>
 <body>
     <div class="container">
-        <h1>Tableau de bord Animaflip - Administration</h1>
+        <h1>Panneau d'administration - Animaflip</h1>
         <p>Bienvenue, {{ user.username }} (Rôle: {{ user.role }})</p>
         <a href="/admin/logout" class="btn btn-back">Déconnexion</a>
 
