--- a/AnimaflipApi/src/views/login.html.twig
+++ b/AnimaflipApi/src/views/login.html.twig
@@ -31,6 +31,12 @@
             color: #333333;
         }
 
+        h3 {
+            margin-bottom: 20px;
+            text-align: center;
+            color: #333333;
+        }
+
         form {
             display: flex;
             flex-direction: column;
@@ -103,7 +109,8 @@
 <body>
 
 <div class="login-container">
-    <h1>Connexion à l'administration</h1>
+    <h1>Animaflip</h1>
+    <h3>Connexion au panneau d'administration</h3>
 
     {% if error %}
         <div class="error">{{ error }}</div>
