--- a/AnimaflipApi/src/views/theme_form.html.twig
+++ b/AnimaflipApi/src/views/theme_form.html.twig
@@ -30,20 +30,30 @@
             <div class="error">{{ error }}</div>
         {% endif %}
 
+        {% if successTheme %}
+            <div class="success">{{ successTheme }}</div>
+        {% endif %}
+
         <div class="card">
             <div class="card-title">
-                <h2>{{ theme ? 'Modifier' : 'Créer' }} un thème</h2>
+                <h2>{{ theme.id ? 'Modifier' : 'Créer' }} un thème</h2>
             </div>
-            <form class="form-custom" method="POST" action="{{ theme ? '/admin/theme/' ~ theme.id ~ '/edit/' ~ token : '/admin/theme/create/' ~ token }}">
-                <label for="themeLibelle">Nom du thème</label>
-                <input type="text" id="themeLibelle" name="themeLibelle" value="{{ theme.libelle ?? '' }}" required>
+            <form class="form-custom" method="POST" action="{{ theme.id ? '/admin/theme/' ~ theme.id ~ '/edit/' ~ token : '/admin/theme/create/' ~ token }}">
+                <label for="libelle">Nom du thème</label>
+                <input type="text" id="libelle" name="libelle" value="{{ theme.libelle }}" required>
 
-                <button type="submit">{{ theme ? 'Mettre à jour' : 'Créer' }}</button>
+                <button type="submit">{{ theme.id ? 'Mettre à jour' : 'Créer' }}</button>
             </form>
+            {% if theme.id %}
+                <form action="/admin/theme/{{ theme.id }}/delete/{{ token }}" method="POST" style="display: inline;">
+                    <button type="submit" class="btn btn-delete">Supprimer</button>
+                </form>
+            {% endif %}
+
         </div>
 
 
-        {% if theme %}
+        {% if theme.id %}
             <div class="card">
                 <div class="card-title">
                     <h2>Affectation des animations</h2>
