Api-Ajout creation animation depuis detail themes

--- a/AnimaflipApi/src/views/theme_form.html.twig
+++ b/AnimaflipApi/src/views/theme_form.html.twig
@@ -86,6 +86,10 @@
                 <div class="card-title">
                     <div class="spacer">
                         <h2>Visuallisation des animations</h2>
+
+                        <div class="spacer">
+                            <a href="/admin/animation/create/{{ token }}" class="btn">Ajouter une nouvelle animation</a>
+                        </div>
                     </div>
                 </div>
                 <table>
