Gestion des eurreur utilisateur

--- a/AnimaflipApi/src/views/theme_form.html.twig
+++ b/AnimaflipApi/src/views/theme_form.html.twig
@@ -85,7 +85,7 @@
             <div class="card">
                 <div class="card-title">
                     <div class="spacer">
-                        <h2>Visuallisation des animations</h2>
+                        <h2>Visualisation des animations</h2>
 
                         <div class="spacer">
                             <a href="/admin/animation/create/{{ token }}" class="btn">Ajouter une nouvelle animation</a>
